fix per selectitem non più visibili negli header della tabella

--- a/frontEnd/src/styles.css
+++ b/frontEnd/src/styles.css
@@ -392,10 +392,11 @@ th .ui-column-title{
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+  display: block;
 }
 
 th {
-  overflow: hidden !important;
+  overflow: visible !important;
 }
 .filterTemplate {
   white-space: nowrap;
